--- a/module4-logistic-regression/Brian_Ross_LS_DS_214_assignment_answers.ipynb
+++ b/module4-logistic-regression/Brian_Ross_LS_DS_214_assignment_answers.ipynb
@@ -204,10 +204,10 @@
       "source": [
         "%matplotlib inline\n",
         "import category_encoders as ce\n",
-        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.metrics import accuracy_score, mean_absolute_error\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.linear_model import LinearRegression, LogisticRegressionCV\n",
+        "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
         "from sklearn.impute import SimpleImputer\n",
         "import plotly.express as px\n",
         "import matplotlib.pyplot as plt\n",
@@ -249,12 +249,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 241
         },
-        "outputId": "ff1c7063-1ae2-4ffd-95c9-c9e3f6a8eb85"
+        "outputId": "9eed2d66-59fa-4dee-f93f-2173f3a744c9"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 112,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,7 +668,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 112
+          "execution_count": 159
         }
       ]
     },
@@ -687,7 +687,16 @@
         "                       'Salsa.1',\t'Cilantro',\t'Onion',\t'Taquito',\t'Pineapple',\n",
         "                       'Ham',\t'Chile relleno',\t'Nopales',\t'Lobster',\t'Queso',\n",
         "                       'Egg',\t'Mushroom',\t'Bacon',\t'Sushi',\t'Avocado',\t\n",
-        "                       'Corn',\t'Zucchini']"
+        "                       'Corn',\t'Zucchini']\n",
+        "\n",
+        "core = ['Tortilla', 'Temp', 'Meat', 'Fillings', 'Meat:filling' ]\n",
+        "\n",
+        "metrics = ['Mass (g)',\t'Density (g/mL)',\t'Length',\t'Circum',\t'Volume', 'Cost',\n",
+        "           'Hunger']\n",
+        "\n",
+        "reviews = ['Yelp', 'Google']\n",
+        "\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -701,7 +710,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6ca06e20-ac18-4044-97b3-6d3c6d2a3a4e"
+        "outputId": "080d0884-d18a-4a54-9b41-c920985e81b3"
       },
       "source": [
         "# Looks like several of the classes are binary classification except they \n",
@@ -718,7 +727,7 @@
         "\n",
         "[convert_to_binary_values(item) for item in test_cases]"
       ],
-      "execution_count": 114,
+      "execution_count": 161,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -730,7 +739,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 114
+          "execution_count": 161
         }
       ]
     },
@@ -767,27 +776,98 @@
       "metadata": {
         "id": "OIyDWhG1yMCJ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "0493bec7-2bd4-4726-9eb0-8f9ee759a7a3"
       },
       "source": [
         "features.remove(target)\n",
         "features"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 164,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Burrito',\n",
+              " 'Date',\n",
+              " 'Yelp',\n",
+              " 'Google',\n",
+              " 'Chips',\n",
+              " 'Cost',\n",
+              " 'Hunger',\n",
+              " 'Mass (g)',\n",
+              " 'Density (g/mL)',\n",
+              " 'Length',\n",
+              " 'Circum',\n",
+              " 'Volume',\n",
+              " 'Tortilla',\n",
+              " 'Temp',\n",
+              " 'Meat',\n",
+              " 'Fillings',\n",
+              " 'Meat:filling',\n",
+              " 'Uniformity',\n",
+              " 'Salsa',\n",
+              " 'Synergy',\n",
+              " 'Wrap',\n",
+              " 'Unreliable',\n",
+              " 'NonSD',\n",
+              " 'Beef',\n",
+              " 'Pico',\n",
+              " 'Guac',\n",
+              " 'Cheese',\n",
+              " 'Fries',\n",
+              " 'Sour cream',\n",
+              " 'Pork',\n",
+              " 'Chicken',\n",
+              " 'Shrimp',\n",
+              " 'Fish',\n",
+              " 'Rice',\n",
+              " 'Beans',\n",
+              " 'Lettuce',\n",
+              " 'Tomato',\n",
+              " 'Bell peper',\n",
+              " 'Carrots',\n",
+              " 'Cabbage',\n",
+              " 'Sauce',\n",
+              " 'Salsa.1',\n",
+              " 'Cilantro',\n",
+              " 'Onion',\n",
+              " 'Taquito',\n",
+              " 'Pineapple',\n",
+              " 'Ham',\n",
+              " 'Chile relleno',\n",
+              " 'Nopales',\n",
+              " 'Lobster',\n",
+              " 'Queso',\n",
+              " 'Egg',\n",
+              " 'Mushroom',\n",
+              " 'Bacon',\n",
+              " 'Sushi',\n",
+              " 'Avocado',\n",
+              " 'Corn',\n",
+              " 'Zucchini']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 164
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tPpQbKPA71US",
+        "id": "_ZYMv_uYBRzr",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "metrics = ['Mass (g)',\t'Density (g/mL)',\t'Length',\t'Circum',\t'Volume']\n",
-        "\n",
-        "for metric in metrics:\n",
-        "  df[metric] = df[metric].fillna(df[metric].mean())"
+        "df = df.fillna(0)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -892,7 +972,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "c8ed7cce-4aa1-4874-8f97-096db2700c60"
+        "outputId": "4419c9f8-1f46-4ca0-ba14-391ba25bce9a"
       },
       "source": [
         "train_base, val_base = calc_accuracy_score(y_train), calc_accuracy_score(y_val)\n",
@@ -900,7 +980,7 @@
         "print(f\"Training model baseline accuracy: {(train_base)*100:,.2f}%\" + \"\\n\")\n",
         "print(f\"Validation model baseline accuracy: {(val_base)*100:,.2f}%\")"
       ],
-      "execution_count": 29,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "stream",
@@ -928,15 +1008,43 @@
       "metadata": {
         "id": "LqzI6ZWYhVPq",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c231763d-b2c1-4230-b7df-b4de6d61759e"
       },
       "source": [
         "#   Instantiate the class\n",
         "linear_reg = LinearRegression()\n",
-        "\n"
+        "\n",
+        "# Arrange Features and Target Vector\n",
+        "features = features_to_convert + metrics + reviews + core\n",
+        "\n",
+        "X_train = train_df[features]\n",
+        "X_val = val_df[features]\n",
+        "X_test = test_df[features]\n",
+        "\n",
+        "\n",
+        "# Fit the model\n",
+        "\n",
+        "linear_reg.fit(X_train, y_train)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 207,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 207
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -946,10 +1054,44 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# Fit the model to the validation set\n",
+        "\n",
+        "val_prediction = linear_reg.predict(X_val)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ihrZCvBR-5fa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7a1e4650-3cbb-4756-d44f-46ca50b9c115"
+      },
+      "source": [
+        "mean_absolute_error(y_val, val_prediction)\n",
+        "\n",
+        "#   Takeaway is that linear regression is not performing well here"
+      ],
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.4751854318487997"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 151
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -965,6 +1107,116 @@
       "cell_type": "code",
       "metadata": {
         "id": "X6SpI8Z4eBum",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Instantiate the model\n",
+        "\n",
+        "log_reg = LogisticRegressionCV(solver='lbfgs')\n",
+        "\n",
+        "log_reg.fit(X_train, y_train)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sIhOPOtIDHrQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "5598d803-4594-4214-b80b-59da3e22ccbd"
+      },
+      "source": [
+        "log_reg.predict(X_val)"
+      ],
+      "execution_count": 205,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+              "       1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1,\n",
+              "       1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1,\n",
+              "       1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 205
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qHfaRSqHDh1u",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9c3d7656-0ee6-4bcc-f169-ebe1240c4f9f"
+      },
+      "source": [
+        "log_reg.score(X_val, y_val) "
+      ],
+      "execution_count": 206,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7529411764705882"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 206
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EEFWEBGKD9jW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "04928ba1-899f-4618-ef65-44d49c01b11d"
+      },
+      "source": [
+        "log_reg.score(X_test, y_test)"
+      ],
+      "execution_count": 208,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7894736842105263"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 208
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "97GLCRITHb2b",
         "colab_type": "code",
         "colab": {}
       },
