Update notebooks from prior work before merging with Github

--- a/module4-logistic-regression/LS_DS_214.ipynb
+++ b/module4-logistic-regression/LS_DS_214.ipynb
@@ -1123,7 +1123,7 @@
    "source": [
     "import category_encoders as ce\n",
     "from sklearn.linear_model import LogisticRegressionCV\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "features = ['Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare', 'Embarked']\n",
     "target = 'Survived'\n",
