--- a/U2S1A2_regression_classification_2_assignment.ipynb
+++ b/U2S1A2_regression_classification_2_assignment.ipynb
@@ -769,6 +769,302 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "dpWbs8TAR9Ce",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 504
+        },
+        "outputId": "a03c0885-f953-4810-cf89-73186be8086d"
+      },
+      "source": [
+        "#Creating a 'cats or dogs allowed' column\n",
+        "df['catsordogs'] = ((df['cats_allowed'] == 1) | (df['dogs_allowed'] == 1))\n",
+        "df.head()"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>bathrooms</th>\n",
+              "      <th>bedrooms</th>\n",
+              "      <th>created</th>\n",
+              "      <th>description</th>\n",
+              "      <th>display_address</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>price</th>\n",
+              "      <th>street_address</th>\n",
+              "      <th>interest_level</th>\n",
+              "      <th>elevator</th>\n",
+              "      <th>cats_allowed</th>\n",
+              "      <th>hardwood_floors</th>\n",
+              "      <th>dogs_allowed</th>\n",
+              "      <th>doorman</th>\n",
+              "      <th>dishwasher</th>\n",
+              "      <th>no_fee</th>\n",
+              "      <th>laundry_in_building</th>\n",
+              "      <th>fitness_center</th>\n",
+              "      <th>pre-war</th>\n",
+              "      <th>laundry_in_unit</th>\n",
+              "      <th>roof_deck</th>\n",
+              "      <th>outdoor_space</th>\n",
+              "      <th>dining_room</th>\n",
+              "      <th>high_speed_internet</th>\n",
+              "      <th>balcony</th>\n",
+              "      <th>swimming_pool</th>\n",
+              "      <th>new_construction</th>\n",
+              "      <th>terrace</th>\n",
+              "      <th>exclusive</th>\n",
+              "      <th>loft</th>\n",
+              "      <th>garden_patio</th>\n",
+              "      <th>wheelchair_access</th>\n",
+              "      <th>common_outdoor_space</th>\n",
+              "      <th>total_rooms</th>\n",
+              "      <th>catsordogs</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.5</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2016-06-24 07:54:24</td>\n",
+              "      <td>A Brand New 3 Bedroom 1.5 bath ApartmentEnjoy ...</td>\n",
+              "      <td>Metropolitan Avenue</td>\n",
+              "      <td>40.7145</td>\n",
+              "      <td>-73.9425</td>\n",
+              "      <td>3000</td>\n",
+              "      <td>792 Metropolitan Avenue</td>\n",
+              "      <td>medium</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4.5</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2016-06-12 12:19:27</td>\n",
+              "      <td></td>\n",
+              "      <td>Columbus Avenue</td>\n",
+              "      <td>40.7947</td>\n",
+              "      <td>-73.9667</td>\n",
+              "      <td>5465</td>\n",
+              "      <td>808 Columbus Avenue</td>\n",
+              "      <td>low</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2016-04-17 03:26:41</td>\n",
+              "      <td>Top Top West Village location, beautiful Pre-w...</td>\n",
+              "      <td>W 13 Street</td>\n",
+              "      <td>40.7388</td>\n",
+              "      <td>-74.0018</td>\n",
+              "      <td>2850</td>\n",
+              "      <td>241 W 13 Street</td>\n",
+              "      <td>high</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2016-04-18 02:22:02</td>\n",
+              "      <td>Building Amenities - Garage - Garden - fitness...</td>\n",
+              "      <td>East 49th Street</td>\n",
+              "      <td>40.7539</td>\n",
+              "      <td>-73.9677</td>\n",
+              "      <td>3275</td>\n",
+              "      <td>333 East 49th Street</td>\n",
+              "      <td>low</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>2016-04-28 01:32:41</td>\n",
+              "      <td>Beautifully renovated 3 bedroom flex 4 bedroom...</td>\n",
+              "      <td>West 143rd Street</td>\n",
+              "      <td>40.8241</td>\n",
+              "      <td>-73.9493</td>\n",
+              "      <td>3350</td>\n",
+              "      <td>500 West 143rd Street</td>\n",
+              "      <td>low</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   bathrooms  bedrooms  ... total_rooms catsordogs\n",
+              "0        1.5         3  ...         4.5      False\n",
+              "1        1.0         2  ...         3.0       True\n",
+              "2        1.0         1  ...         2.0      False\n",
+              "3        1.0         1  ...         2.0      False\n",
+              "4        1.0         4  ...         5.0      False\n",
+              "\n",
+              "[5 rows x 36 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "IN2D8lChzzmt",
         "colab_type": "code",
         "colab": {
