--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,12 +127,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Drop some columns to prevent \"leakage\"\n",
     "df = df.drop(columns=['Rec', 'overall'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Burrito</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Yelp</th>\n",
+       "      <th>Google</th>\n",
+       "      <th>Chips</th>\n",
+       "      <th>Cost</th>\n",
+       "      <th>Hunger</th>\n",
+       "      <th>Mass (g)</th>\n",
+       "      <th>Density (g/mL)</th>\n",
+       "      <th>Length</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Lobster</th>\n",
+       "      <th>Queso</th>\n",
+       "      <th>Egg</th>\n",
+       "      <th>Mushroom</th>\n",
+       "      <th>Bacon</th>\n",
+       "      <th>Sushi</th>\n",
+       "      <th>Avocado</th>\n",
+       "      <th>Corn</th>\n",
+       "      <th>Zucchini</th>\n",
+       "      <th>Great</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>California</td>\n",
+       "      <td>1/18/2016</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.49</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>California</td>\n",
+       "      <td>1/24/2016</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.45</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Carnitas</td>\n",
+       "      <td>1/24/2016</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.85</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Asada</td>\n",
+       "      <td>1/24/2016</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>California</td>\n",
+       "      <td>1/27/2016</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>x</td>\n",
+       "      <td>6.59</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 59 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Burrito       Date  Yelp  Google Chips  Cost  Hunger  Mass (g)  \\\n",
+       "0  California  1/18/2016   3.5     4.2   NaN  6.49     3.0       NaN   \n",
+       "1  California  1/24/2016   3.5     3.3   NaN  5.45     3.5       NaN   \n",
+       "2    Carnitas  1/24/2016   NaN     NaN   NaN  4.85     1.5       NaN   \n",
+       "3       Asada  1/24/2016   NaN     NaN   NaN  5.25     2.0       NaN   \n",
+       "4  California  1/27/2016   4.0     3.8     x  6.59     4.0       NaN   \n",
+       "\n",
+       "   Density (g/mL)  Length  ...  Lobster  Queso  Egg  Mushroom  Bacon  Sushi  \\\n",
+       "0             NaN     NaN  ...      NaN    NaN  NaN       NaN    NaN    NaN   \n",
+       "1             NaN     NaN  ...      NaN    NaN  NaN       NaN    NaN    NaN   \n",
+       "2             NaN     NaN  ...      NaN    NaN  NaN       NaN    NaN    NaN   \n",
+       "3             NaN     NaN  ...      NaN    NaN  NaN       NaN    NaN    NaN   \n",
+       "4             NaN     NaN  ...      NaN    NaN  NaN       NaN    NaN    NaN   \n",
+       "\n",
+       "   Avocado  Corn  Zucchini  Great  \n",
+       "0      NaN   NaN       NaN  False  \n",
+       "1      NaN   NaN       NaN  False  \n",
+       "2      NaN   NaN       NaN  False  \n",
+       "3      NaN   NaN       NaN  False  \n",
+       "4      NaN   NaN       NaN   True  \n",
+       "\n",
+       "[5 rows x 59 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
