--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -27,8 +27,8 @@
     "\n",
     "> We have developed a 10-dimensional system for rating the burritos in San Diego. ... Generate models for what makes a burrito great and investigate correlations in its dimensions.\n",
     "\n",
-    "- [ ] Do train/validate/test split. Train on reviews from 2016 & earlier. Validate on 2017. Test on 2018 & later.\n",
-    "- [ ] Begin with baselines for classification.\n",
+    "- [X] Do train/validate/test split. Train on reviews from 2016 & earlier. Validate on 2017. Test on 2018 & later.\n",
+    "- [X] Begin with baselines for classification.\n",
     "- [ ] Use scikit-learn for logistic regression.\n",
     "- [ ] Get your model's validation accuracy. (Multiple times if you try multiple iterations.)\n",
     "- [ ] Get your model's test accuracy. (One time, at the end.)\n",
@@ -133,6 +133,13 @@
    "source": [
     "# Drop some columns to prevent \"leakage\"\n",
     "df = df.drop(columns=['Rec', 'overall'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Do train/validate/test split. Train on reviews from 2016 & earlier. Validate on 2017. Test on 2018 & later."
    ]
   },
   {
@@ -342,6 +349,76 @@
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Date'] = pd.to_datetime(df['Date'], infer_datetime_format=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((298, 59), (85, 59), (38, 59))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train = df[df['Date'].dt.year <= 2016]\n",
+    "val = df[df['Date'].dt.year == 2017]\n",
+    "test = df[df['Date'].dt.year >= 2018]\n",
+    "\n",
+    "train.shape, val.shape, test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Begin with baselines for classification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    0.590604\n",
+       "True     0.409396\n",
+       "Name: Great, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target = 'Great'\n",
+    "train[target].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The majority class baseline accuracy is 59%, so let's see if we can beat it!"
    ]
   },
   {
